--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <article>
         <ul id="demo-list">
             <a href="single-level-dropdown-menu/index.html"><li>单级下拉菜单</li></a>
+            <a href="onscrool-header-effect/index.html"><li>随滚动变化的导航</li></a>
         </ul>
     </article>
     <script type="text/javascript">
