Kotori punch ! :punch:

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>WebUI元素实例集</h2>
         </div>
         <div id="header-extend">
-            <p>这是一个关于WebUI元素实现的个人集合</p>
+            <p>这是一个关于WebUI元素与常用效果实现的个人集合</p>
             <p><a href="https://github.com/frantic1048/Kotori-no-UI" target="_blank">前往该项目的Github页面</a></p>
         </div>
     </header>
