add parallax effect demo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul id="demo-list">
             <a href="single-level-dropdown-menu/index.html"><li>单级下拉菜单</li></a>
             <a href="onscrool-header-effect/index.html"><li>随滚动变化的导航</li></a>
+            <a href="parallax-background/index.html"><li>滚动视差效果</li></a>
         </ul>
     </article>
     <script type="text/javascript">
