--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="single-level-dropdown-menu/index.html"><li>单级下拉菜单</li></a>
             <a href="onscrool-header-effect/index.html"><li>随滚动变化的导航</li></a>
             <a href="parallax-background/index.html"><li>滚动视差效果</li></a>
+            <a href="iwannadrag/index.html"><li>可拖拽元素</li></a>
         </ul>
     </article>
     <script type="text/javascript">
