--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Kotori no UI | WebUI 元素实例集</title>
+    <title>Kotori no Garden | 各种网页实例集</title>
     <meta author="frantic1048">
-    <meta description="Webpange UI element demos">
+    <meta description="Webpange demos">
     <link rel="stylesheet" href="style/stylesheets/mainstyle.min.css" type="text/css">
 </head>
 <body>
     <header>
         <div id="header-standard">
-            <h1>Kotori no UI</h1>
-            <h2>WebUI 元素实例集</h2>
+            <h1>Kotori no Garden</h1>
+            <h2>各种网页实例集</h2>
         </div>
         <div id="header-extend">
-            <p>这是一个关于 WebUI 元素与常用效果实现的个人集合</p>
-            <p><a href="https://github.com/frantic1048/Kotori-no-UI" target="_blank">前往该项目的 Github 页面</a></p>
+            <p>这是一个各种网页实例的个人集合</p>
+            <p><a href="https://github.com/frantic1048/Kotori-no-Garden" target="_blank">前往该项目的 Github 页面</a></p>
         </div>
     </header>
     <article>
