--- a/iwannadrag/index.html
+++ b/iwannadrag/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>可拖拽元素 | Kotori no UI</title>
+  <title>可拖拽元素 | Kotori no Garden</title>
   <link rel="stylesheet" href="draggable.css" type="text/css">
 </head>
 <body>
