--- a/onscrool-header-effect/index.html
+++ b/onscrool-header-effect/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>onScroll Header Effect | Kotori no UI</title>
+    <title>onScroll Header Effect | Kotori no Garden</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script type="text/javascript" src="jj.js"></script>
 </head>
