--- a/parallax-background/index.html
+++ b/parallax-background/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>滚动视差效果 | Kotori no UI</title>
+  <title>滚动视差效果 | Kotori no Garden</title>
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body id=parallax-box>
