--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="onscrool-header-effect/index.html"><li>随滚动变化的导航</li></a>
             <a href="parallax-background/index.html"><li>滚动视差效果</li></a>
             <a href="iwannadrag/index.html"><li>可拖拽元素</li></a>
+            <a href="timeline-adsorption/index.html"><li>可以戳的条条</li></a>
         </ul>
     </article>
     <script type="text/javascript">
